--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReGl Example Project</title>
+    <title>Reason Dojo</title>
   </head>
   <body>
-    <script src="./require_polyfill.js" data-main="lib/js/src/index.js" data-project-root="./"></script>
+    <script src="app.js"></script>
   </body>
 </html>
